--- a/skysub.tex
+++ b/skysub.tex
@@ -160,12 +160,12 @@ Finally in Section~\ref{sec:conclusions} we summarize the uncertainty of NIR sky
 
 \begin{figure}[t]
 \centering
-\includegraphics[width=\columnwidth]{figs/fieldmap}
+\includegraphics[width=\columnwidth]{figs/fieldmap_colour}
 \caption{\androids\ WIRCam field positions on M31.
-Central dark grey fields are the 27 disk fields observed in 2007B, surrounded by 4 sky fields (dark grey).
-Light grey fields at center are the 12 disk fields observed in 2009B.
-The light grey ring of 53 fields is the 2009B sky sampling ring.
-The white ellipse marks the M31 disk at $R=20$ kpc along the major axis.
+Central blue fields are the 27 disk fields observed in 2007B, surrounded by 4 sky fields (blue with dotted outlines).
+Red fields at center are the 12 disk fields observed in 2009B.
+The red ring of 53 fields is the 2009B sky sampling ring.
+The yellow ellipse marks the M31 disk at $R=20$ kpc along the major axis.
 Coordinates are centered on the nucleus of M31 with North up, and East is left.
 Plotted against a star count map of M31 produced with the Isaac Newton Telescope, from \cite{Ibata:2005}, which shows that our sky fields lie beyond the stellar content of M31's disk.}
 \label{fig:fieldmap}
