--- a/skysub.tex
+++ b/skysub.tex
@@ -1234,12 +1234,12 @@ These maps surpass the 2MASS \citep{Beaton:2007} and Spitzer \citep{Barmby:2006}
 The dataset is also complementary to the HST/WF3 PHAT survey \citep{Dalcanton:2012} by providing complete coverage of M31's disk to $R=22$~kpc, and by offering a broader NIR colour baseline ($J-K_s$) than is offered by WF3 (approximately $J-H$).
 NIR mosaics of M31 have crucial applications for studies of the nearly attenuation-free stellar structure of our nearest spiral neighbour, and for tests of stellar population synthesis models in NIR regimes.
 
-Our focus in this paper has been the establishment of procedures for accurately recovering the NIR surface brightness across 3~sq.~deg.\ of the M31 disk using a sky-target nodding observing strategy with WIRCam on CFHT@.
+Our focus in this paper has been the establishment of procedures for accurately recovering the NIR surface brightness across 3~sq.~deg.\ of the M31 disk using a sky-target nodding observing strategy with WIRCam on CFHT\@.
 We have compared two different observing methods to study the affects of sky target nodding cadences and patterns on sky subtraction uncertainties.
 We have also developed and tested our WIRCam pipeline for flat fielding, zeropoint estimation, median sky subtraction, and sky offset optimization.
 
 We find that our NIR SB reconstruction is limited on two regimes: large scale reconstruction of surface brightness with sky offsets, and surface brightness \emph{shape} uncertainties across individual WIRCam images.
-On a large scale, the necessity of nodding between sky and target limits the our direct knowledge of the sky level on the disk by $gtrsim 2$\% of the sky level.
+On a large scale, the necessity of nodding between sky and target limits the our direct knowledge of the sky level on the disk by $\gtrsim 2$\% of the sky level.
 Strictly minimizing latency between sky and disk integrations (as in the 2009B program) provides only limited improvement in our knowledge of the sky level on the disk because of the overhead in nodding the telescope, and spatial structure in the NIR sky glow itself.
 Sky offset optimization is successful in reducing block-to-block surface brightness differences to $<0.1$\% of the sky level.
 Given a realized set of blocks, our optimization algorithm reliable finds a consistent solution, so any errors in surface brightness shape across the mosaic are caused by errors in the shapes of individual blocks (see below).
