--- a/skysub.tex
+++ b/skysub.tex
@@ -1261,7 +1261,7 @@ We first recommend that the sky-target nodding cadence be set to effectively bui
 A program should attempt to observe sufficient sky to build a sky flat within a window of 20--30 minutes, where the sky is observed in several epochs at different locations in the sampling ring to minimize biases.
 
 In the $K_s$ band this objective is simple to efficiently achieve, since the mean sky flux on a WIRCam pixel is $450 \pm 80$ ADU~$\mathrm{s^{-1}}$.
-Given $T_\mathrm{exp}=25$~s, a $\mathrm{[S^3T^6]^3]}$ program can compile the necessary 9 sky integration in under 20~minutes, with a maximum sky-target latency of 2~minutes.
+Given $T_\mathrm{exp}=25$~s, a $\mathrm{[S^3T^6]^3}$ program can compile the necessary 9 sky integration in under 20~minutes, with a maximum sky-target latency of 2~minutes.
 Each sky flat would be built from observations are three sites along the sky ring.
 
 Lower sky flux in the $J$ band ($120 \pm 30$~ADU~s$^{-1}$) makes achieving 10$^5$ sky ADU more difficult.
