--- a/skysub.tex
+++ b/skysub.tex
@@ -497,7 +497,7 @@ The Two Micron All Sky Survey (2MASS) Point Source Catalog (PSC) \citep{Skrutski
 WIRCam pointings ($20\arcmin \times 20\arcmin$) in this survey contain typically $\sim 500$ 2MASS stars.
 % see python $andpipe/wircam/calibset/photcal/tmass_source_count.py
 Although these are not standards, the ensemble of 2MASS stars may be treated as such.
-Since the disk of M31 is crowded, and 2MASS has poor resolution ($1\arcsec$~pix$^{-1}$ \todo{verify this pixel scale}), we consider 2MASS point source measurements to be unreliable on the disk.
+Since the disk of M31 is crowded, and 2MASS has poor resolution ($1\arcsec$~per pixel), we consider 2MASS point source measurements to be unreliable on the disk.
 Instead, all zeropoints are measured against sky images, and those calibrations are applied to paired disk images (analogous to the median sky subtraction procedure, described in Section \ref{sec:mediansky}).
 
 Photometry of 2MASS stars in the uncrowded sky fields is obtained with Source Extractor \citep{Bertin:1996}.
@@ -517,7 +517,7 @@ Given sample of matching 2MASS and instrumental photometry, the instrumental zer
   m_0 = \langle m_\mathrm{2MASS} + 2.5 \log_{10}(\mathrm{ADU}/T_\mathrm{exp}) - A (J-K_s)_\mathrm{2MASS} \rangle.
 \end{equation}
 
-\todo{Something with percentages?}
+% \todo{Something with percentages?}
 The $A$ term permits a linear colour transformation between the 2MASS and WIRCam bandpasses.
 Although we could fit a colour transformation coefficient $A$ for each image, the short $J-K_s$ colour baseline makes such measurements unreliable.
 Instead we adopt $A_J = 0.05$ and $A_{K_s} = -0.05$ (K. Thanjuvar, priv.\ comm.) based on modelling stellar spectra with the 2MASS and CFHT/WIRCam transmission functions.
@@ -574,26 +574,27 @@ Given this measurement $\epsilon_i - \epsilon_j$ of residual sky intensity, we i
 
 \noindent and the intrinsic intensities cancel, $I_i - I_j = 0$.
 Given a single pair of images, the inference of $\Delta_i$ and $\Delta_j$ is degenerate given the single difference image, $\epsilon_i-\epsilon_j$.
-But in a mosaic, each image is coupled with many other images, and the mosaic itself can be considered as a network of coupled images.
-If we model the residual sky intensity $\epsilon_i$ as having a simple shape across the observed images, the single offset $\Delta_i$ will minimize all difference images involving image $i$.
-That is, sky offsets can be chosen by the optimization of
+In a mosaic, each image is coupled with many other images, and the mosaic itself can be considered as a network of coupled images.
+Thus by optimizing a set of sky offsets for all images simultaneously that minimizes all image-to-image differences in a mosaic, a robust of set of $\Delta_i$ can be established.
 
-\begin{equation}
-    \sum_{\forall i,j} [(\epsilon_i - \epsilon_j) - \Delta_i + \Delta_j] \rightarrow 0
-    \label{eq:scalartheoryobj}
-\end{equation}
 
-\noindent over all coupled image pairs $(i,j)$ in the mosaic.
-Note that absolute uniqueness is not guaranteed.
-In the limit that sky offsets $\Delta_i$ are drawn from a Gaussian distribution, with standard deviation $\sigma_\Delta$, the absolute brightness of the whole mosaic will be uncertain by $\sigma_\Delta / \sqrt{N_\mathrm{images}}$.
-The consequences of this uncertainty are revisited in \Sec{systematics}.
+% If we model the residual sky intensity $\epsilon_i$ as having a simple shape across the observed images, the single offset $\Delta_i$ will minimize all difference images involving image $i$.
+% That is, sky offsets can be chosen by the optimization of
+
+% \begin{equation}
+%     \sum_{\forall i,j} [(\epsilon_i - \epsilon_j) - \Delta_i + \Delta_j] \rightarrow 0
+%     \label{eq:scalartheoryobj}
+% \end{equation}
+
+% \noindent over all coupled image pairs $(i,j)$ in the mosaic.
+% Note that absolute uniqueness is not guaranteed.
 
 \subsection{Implementations}
 \label{sec:offset_algos}
 
-The sky offset optimization summarized in \Eq{scalartheoryobj} is difficult to implement because it is over-constrained, requiring a non-linear optimization.
+The sky offset optimization summarized above is difficult to implement because it is over-constrained, requiring a non-linear optimization.
 Any single image is connected in a network with others, and any error in the surface brightness \emph{shapes} of fields will result in an imperfect match.
-In this work, we consider two implementations of \Eq{scalartheoryobj}.
+In this work, we consider two implementations of sky offset optimization.
 First, we review the \sw{Montage} software package in \Sec{montage_algo}, and then introduce an alternative in \Sec{msrnm_algo}.
 
 \subsubsection{Montage}
@@ -610,8 +611,8 @@ In particular, we are interested in the robustness of Montage sky offsets agains
 \subsubsection{A New Implementation based on the Multi-Start Reconverging Downhill Simplex}
 \label{sec:msrnm_algo}
 
-As an alternative to the iterative algorithm used by \sw{Montage}, we introduce here an implementation based on the Downhill-Simplex algorithm \cite[][hereafter, NM]{Nelder:1965}.
-Like \sw{Montage}, our pipeline begins with a set of images resampled to a common pixel grid in an Aitoff projection with the native WIRCam pixel scale (0.3 \arcsec/pixel).
+As an alternative to the iterative algorithm used by \sw{Montage}, we introduce here an implementation based on the Downhill Simplex algorithm \cite[][hereafter, NM]{Nelder:1965}.
+Like \sw{Montage}, our pipeline begins with a set of images resampled to a common pixel grid in an Aitoff projection with the native WIRCam pixel scale (0\farcs 3 per pixel).
 For this we use \sw{Swarp} \citep{Bertin:2002} in resample-only mode.
 We identify overlaps between images in a brute-force fashion according to their frames in the mosaic pixel space, defined by the \texttt{CRPIX} and \texttt{NAXIS}$i$ header values of the resampled images.
 
@@ -645,63 +646,53 @@ Fortunately, it is possible to impose this constraint \textit{post facto} by sub
     \label{eq:netzero}
 \end{equation}
 
-Given the image coupling records, we optimize the set of $\Delta_i$ using the NM downhill simplex algorithm.
+\noindent In the limit that sky offsets $\Delta_i$ are drawn from a Gaussian distribution, with standard deviation $\sigma_\Delta$, the absolute brightness of the whole mosaic will be uncertain by $\sigma_\Delta / \sqrt{N_\mathrm{images}}$.
+The consequences of this uncertainty are revisited in \Sec{systematics}.
+
+Given the image coupling records, we optimize the set of $\Delta_i$ using the \cite{Nelder:1965} downhill simplex algorithm (hereafter NM).
 This NM algorithm is naturally multi-dimensional and does not require knowledge of the gradient of the objective function.
 Instead, the NM algorithm operates by constructing a geometric simplex of $N+1$ dimensions that samples the sky offset parameter space.
 By evaluating the objective function at each vertex of the simplex, the NM algorithm adapts the simplex shape to ultimately contract upon a minimum.
 
-However NM has two weaknesses.
+However, NM has two weaknesses.
 First, it is a greedy optimizer that will converge into any local minimum, without necessarily seeking the global minimum.
 Second, for high-dimension optimizations (many fields in the mosaic), the NM may fail to converge in a reasonable number of objective function evaluations \citep{Neumann:2006}.
 Without solving these issues, a minimization of \Eq{objf} with an off-the-shelf NM code yields a mosaic with obvious discontinuities across fields.
 To solve the first problem, we develop a Multi-Start Reconverging NM (MSRNM) downhill simplex driver.
-This algorithm allows the NM to cumulatively cover a larger portion of parameter space to probabilistically ensure convergence into a global optimum.
+This algorithm, outlined below, allows the NM to cumulatively cover a larger portion of parameter space to probabilistically ensure convergence into a global optimum.
 
-Several approaches exist to globalize the NM algorithm in the high-dimensional case.
-\cite{Harris:2001} use the NM simplex to fit stellar populations, of roughly 50 parameters, to colour magnitude diagrams in their \sw{StarFISH} application.
-Solving for scalar sky offsets in this WIRCam survey has roughly the same degree of complexity.
-In the case of \sw{StarFISH}, \citeauthor{Harris:2001} combine the NM simplex optimization with brute force line searches.
-
-An initial grid search indicates a rough starting point for the simplex.
-The simplex is allowed to converge upon as minimum through the standard NM algorithm.
-Retaining the best point, the other points in the simplex are inflated, and the simplex is again allowed to converge upon a minimum---hopefully the original.
-Yet this minimum may still be a local one.
-To guard against this, points near the minimum are probed.
-If the point is more ideal, then that direction of parameter space is searched until the objective function starts increasing.
-This random linear search through parameter space is repeated several thousand times.
-
-Another globalization recipe is to start the simplex from a large ensemble of starting positions in parameter space. The global minimum of the objective function should be accessible to the NM algorithm from some portion of the imaginable starting parameter space. An advantage of this is that each start of the downhill simplex can be carried out in parallel on a computing cluster. There are recipes in the literature for choosing the best ensemble of starting simplexes: some based upon a running memory of past downhill simplex runs, and others simply based upon having a uniform coverage of parameter space \citep[\eg][]{Luersen:2004,Wolff:2004}.
-
-The globalization strategy developed here is borrows from the techniques in the literature.
-\todo{(add citations.)}
-While it is not proven ideal, or most efficient, algorithm, this strategy is easy to implement and provides adequate results.
-This strategy wraps the core NM algorithm with multiple random starting positions, and multiple restarts at each converged location until a stable---and global---minimum is found.
-Hence this technique is informally termed the Multi-start Reconverging Nelder Mead Simplex (MSRNM).
-
-\paragraph{Multi-start} First, a total of $N_s$ starts of the NM algorithm are designated.
-We find that $N_s=1000$ is quite sufficient for an optimization with 39 parameters (such as the fitting of $\Delta_B$ block offsets in mosaic, see \Sec{hierarchical_algo}).
+\paragraph{Multi-start} To cover a large portion of parameter space, and protect against starting near a false minimum, we start several independent simplex runs from random points in parameter space.
+We find that $N_s=50$, and possibly fewer, stars are quite sufficient for an optimization with 39 sky offset parameters (such as the fitting of $\Delta_B$ block offsets in mosaic, see \Sec{hierarchical_algo}).
 For each start, an initial simplex is generated randomly.
 Since each point in the $N$ by $N+1$ simplex is a suggested sky offset for a given field, each offset is randomly sampled from the expected distribution of image-to-image sky offsets.
 That is, a normal distribution of mean zero intensity, and standard deviation of $\sigma_\mathrm{start}$.
-To ensure that the parameter space is well covered, we design $\sigma_\mathrm{start}$ to be $10\times$ greater than the dispersion of image-to-image differences.
+To ensure that the parameter space is well covered, we design $\sigma_\mathrm{start}$ to be $3\times$ greater than the dispersion of image-to-image differences.
 
 Each initial simplex is allowed to converge according to the NM algorithm.
-A simplex is deemed to have converged once each point has changed by no more than \todo{$10^{-4}$} of the previous iteration, or the objective function's value has changed by no more than \todo{$10^{-4}$} of the previous iteration. 
+A simplex is deemed to have converged once each point has changed by no more than $10^{-6}$ of the previous iteration.
 
-\paragraph{Restart} Upon convergence, the optimal point in the simplex, $\vect{p}$, is recorded.
+\paragraph{Restart} As suggested in \cite{Press:2007}, we restart the converged simplex to ensure reconvergence and protect against false minima.
+Upon each convergence, the optimal point in the simplex, $\vect{p}$, is recorded.
 A new simplex is then generated where one vertex is $\vect{p}$, and the rest are $\vect{p}+\vect{\delta}$ where $\vect{\delta}$ is a normal random variable of mean zero, and standard deviation $\sigma_\mathrm{restart}$.
 That is, the simplex of the restart retains one vertex upon the previously found minimum, while the other vertices surround that minimum.
 If the minimum is indeed the global minimum, then the NM algorithm will quickly reconverge.
 More often than not, the other random vertices will probe an even better parameter space, causing the NM restart to converge upon a new minimum.
 When a new minimum is found, the process of restarting is repeated until the same minimum is consecutively arrived upon.
+Our sky offset optimizations for 39 blocks typically require $\sim1000$ restarts before converging definitively.
+Given the large number of restarts, we find that this reconvergence feature is extremely effective at eluding false minima in our optimizations.
+We set $\sigma_\mathrm{restart}$ to $2\times$ the dispersion of image-to-image differences.
 Like $\sigma_\mathrm{start}$, there is flexibility in choosing $\sigma_\mathrm{restart}$; generally $\sigma_\mathrm{start}$ should be on the order of the observed image-to-image difference dispersion, not not necessarily as large as $\sigma_\mathrm{start}$.
-\todo{Cite numerical recipes for this algorithm design? Or it is from elsewhere?}
+
+Note that each simplex start and series of subsequent restarts can be performed in parallel.
+Once all simplex runs are complete, the set of sky offsets belonging to the run that yielded the smallest value of the objective function is adopted.
 
 \subsection{Hierarchical sky offset optimization}
 \label{sec:hierarchical_algo}
 
-Sky offset optimization is challenging because of dimensionality. Assuming that sky residuals are \emph{constant} across a frame, each image frame represents a new dimension ($\Delta_i$) in the optimization. Considering that the WIRCam array produces four image frames for every exposure, the combined 2007B and 2009B data sets consist of 3924 $J$ and 4972 $K_s$ image frames covering the disk of M31. Such a large optimization is computationally ambitious, but also unnecessary.
-
+Sky offset optimization is challenging because of dimensionality.
+Each image frame, and the associated scalar sky offset $\Delta_i$, represents an additional dimension in the optimization.
+Considering that the WIRCam array produces four image frames for every exposure, the combined 2007B and 2009B data sets consist of 3924 $J$ and 4972 $K_s$ image frames covering the disk of M31.
+Such a large optimization is computationally ambitious, but also unnecessary.
 Our sky optimization algorithm breaks the optimization of sky offsets into three sequential steps, which we call \emph{hierarchical sky offset optimization}.
 
 The 2007B and 2009B WIRCam surveys observed a total of 39 \emph{fields} across the M31 disk (illustrated in \Fig{fieldmap}).
@@ -709,27 +700,15 @@ Each WIRCam field is imaged with four detectors, arranged in a $2\times 2$ grid.
 Let us define a \emph{detector field} as the collection of images taken with a given detector, at a given field.
 Images in a detector field all have the greatly simplifying property of overlapping across a common section of the image frame.
 
-Thus our M31 WIRCam mosaics are assembled in three steps.
-In Step 1 we combine the frames in a detector field to produce a \emph{detector field stack}.
+Thus our M31 WIRCam mosaics are assembled by applying sky offsets in three levels of hierarchy.
+In the first level we combine the frames in a detector field to produce a \emph{detector field stack}; these offsets are labelled as $\Delta_F$.
 The combined 2007B and 2009B surveys have 156 such stacks per filter.
-In Step 2, the four detector field stacks within each field can be fitted into a \emph{block}.
+In the second level, the four detector field stacks within each field can be fitted into a \emph{block} using offsets labelled as $\Delta_S$.
 A block is a fundamental unit of the mosaic, as all images that are combined within a block were observed under contemporaneous sky conditions.
-Finally, in Step 3, the 39 blocks can be fitted into a galaxy-wide mosaic for each filter.
-
-Note that detector field stacks can be made with a simple median-combination of frames in a detector field.
-Since the frames are dithered, the periphery of the detector field is covered by subsets of the frames.
-A simple median combination, then, produces edges that have background levels that are biased compared to the central pixels that are covered by the entire frame set.
-A solution is to estimate offsets for each frame compared to this first detector field stack.
-Offsets are computed as the median of the difference image between the stack and individual image frames.
-The original image frames, now with offsets applied, are re-combined into a detector field stack image.
-Edge effects are now smaller.
-Nonetheless, offsets are estimated a second time to produce a finalized detector field stack image.
-Let us denote the offsets applied to individual \emph{frames} at this first stage as $\Delta_F$.
-
-In the second hierarchical level, we combine sets of four detector field stacks into blocks.
-Here we must use the non-linear optimization algorithms detailed in \Sec{montage_algo} or \Sec{msrnm_algo}.
-Let us denote the offsets of \emph{stacks} into blocks as $\Delta_S$.
-We also use our offset optimization algorithms to combine blocks into a mosaic. The sky offsets applied to \emph{blocks} at this stage are labelled $\Delta_B$. We also measure a net offset: $\Delta_\Sigma = \Delta_F + \Delta_S + \Delta_B$ for each frame.
+Finally, in the third level, the 39 blocks can be fitted into a galaxy-wide mosaic for each filter using offsets labelled as $\Delta_B$.
+The net scalar sky offset applied to each frame is thus $\Delta_\Sigma = \Delta_F + \Delta_S + \Delta_B$.
+In both the second and third levels, we use the MSRNM scheme to optimize the set of $\Delta_S$ and $\Delta_B$ offsets, respectively.
+Note that for detector field stacks it is sufficient to simply compute a mean surface brightness across all frames, and directly compute offsets ($\Delta_F$) between between the levels of each frame and the mean level.
 
 \section{Analysis of Scalar Sky Offsets}
 \label{sec:scalaranalysis}
@@ -769,7 +748,8 @@ It is this level of uncertainty that sky offset optimization must diminish to tr
 
 Note that offsets to fit a stack into a block ($\Delta_S$) of four detector field stacks are smallest: 0.1\% of the sky level.
 This suggests that on the scale of the $2\times 2$ WIRCam array, the contemporaneously observed detector frames are subjected to nearly identical biases in sky background.
-Stack offsets, then, arise from uncertainties in the pipeline's measurement of the sky level from single frames in two stages: estimating detector-to-detector zeropoint offsets from frame sky levels (\Sec{flatbuilding}) and again when subtracting a median sky frame (\Sec{mediansky}).  \mycomment{Come back to this statement after the analysis of sky shape variations; it could be a consequence of background sky shape uncertainty.}
+Stack offsets, then, arise from uncertainties in the pipeline's measurement of the sky level from single frames in two stages: estimating detector-to-detector zeropoint offsets from frame sky levels (\Sec{flatbuilding}) and again when subtracting a median sky frame (\Sec{mediansky}).
+Indeed, in \Sec{skyflatstability} we show that median sky images have shape amplitudes of 0.3\% of the sky level and that individiual frames have surface brightness shapes that are uncertainty at a level of 0.2\%; $\Delta_S$ sky offsets are thus a consequence of the limited surface brightness flattness across a WIRCam frame.
 
 A comparison between the net sky offsets applied to the 2007B and 2009B data sets is provocative.
 Although the 2009B dataset employed rapid sky-target nodding to minimize temporal lags between disk and sky sampling, the magnitude of sky offsets in the 2007B and 2009B semesters is comparable.
