Fix labels in sky error growth plot

--- a/skysub.tex
+++ b/skysub.tex
@@ -906,8 +906,7 @@ This also better explains \Tab{offset_hierarchy}.
 \includegraphics[width=\columnwidth]{figs/nodding_sationary_skyvar_skyfrac}
 \caption{Comparison of sky variation distribution functions measured as sky offset amplitudes and between pairs of sky images for $J$ (top) and $K_s$ (bottom) bands.
 Mean and 95\% levels of sky variation are plotted as solid and dashed red lines, respectively.
-Mean and 95\% levels of sky offsets in the 2007B semester are plotted as large green circles and X symbols, respectively, while the same for the 2009B semester is plotted as orange symbols where sky latency was constrained to 1.2~minutes in both bands.
-\todo{Label J and Ks axes}.}
+Mean and 95\% levels of sky offsets in the 2007B semester are plotted as large green circles and X symbols, respectively, while the same for the 2009B semester is plotted as orange symbols where sky latency was constrained to 1.2~minutes in both bands.}
 \label{fig:nodding_stationary_skyvar_skyfrac}
 % python $andpipe/wircam/skyanalysis/nodding_stationary_skyvariability.py
 \end{figure}
