Confirm that sky is 8 mag brighter than disk at 22 kpc; 1500x

--- a/skysub.tex
+++ b/skysub.tex
@@ -265,7 +265,7 @@ These integrations are sufficiently deep for resolved stellar photometry to reac
 
 The 2007B ST nodding strategy was motivated by a canonical understanding of NIR sky behaviour, since ST nodding sky subtraction had never been attempted on this scale before.
 The NIR sky intensity can be expected to change by 5\% in 10~minutes \citep{Adams:1996,Vaduvescu:2004}.
-Since the sky itself is \todo{$\sim10^3\times$ brighter} than the outer disk of M31 in the NIR, a 5\% uncertainty in the background would be fatal to our objective of recovering M31's extended NIR surface brightness.
+Since the sky itself is $\sim10^3\times$ brighter than the outer disk of M31 in the NIR, a 5\% uncertainty in the background would be fatal to our objective of recovering M31's extended NIR surface brightness.
 To constrain sky brightness to within 1\%, we ensured that a sky sample would be no more than 5 minutes removed from a M31 target image.
 Given the respective exposure times (chosen so as not to saturate with the sky brightness), this implied a sky ($S$)--target ($T$) observing sequence of $S^3T^8S^3$ in $J$ and $S^5T^{13}S^5$ in $K_s$.\footnote{Superscripts here denote the number of times an observation is repeated in sequence for a given target disk field.}
 Four sky fields were chosen (\Fig{fieldmap}), and each disk field was associated with a single sky field.
